      of] a default spec, which is normally OWL_MEM_RDFS_INF. However,
      if the root resource is ja:<SomeOntModelSpecConstantName>, then
      that constant provides the default. This gives the intended
      behaviour of "I specified no properties" and additionally
      allows specs to be specified as tweaks-to-a-constant.

ModelSpec and family REMOVED
    o the long-obsolete and recently-deprecated ModelSpec has been removed,
      along with its related tests, descendants, registry, and references.
      OntModelSpec remains (but is no longer a ModelSpec), with the old
      ModelSpec-oriented constructors deprecated and new Assembler statics
      introduced.

      OntModelSpec now extends OntModelSpecObsolete, which holds (almost)
      all of the OntModelSpec's deprecated ModelSpec-oriented machinery. 
      OMSO will vanish after the next Jena release, when the remaining 
      ModelSpec code will evaporate.

Deprecated XSD.NS in favour of XSD.getURI() which reports namespace with a 
      trailing # character.
      
Reasoners:
    o Extended rule syntax to accept URIs wrapped in <..> and file: uris

Typed literals
    o Fixed problem which prevented Calendars being used to instantiate 
      XSDDates rather than full XSDDateTimes
      
==== Jena 2.5.2

RDQL support now in ARQ
    o Removed old RDQL engine
      Migrate to SPARQL, use ARQ instead and package com.hp.hpl.jena.query
      http://jena.sf.net/ARQ/ -- ARQ also supports RDQL as a legacy language

RDFException removed
    o Removed RDFException. It was obsolete (and recently deprecated). It's
      subclasses are now subclasses of JenaException.

rdfcat tool
	o The handling of command line arguments to rdfcat has changed slightly.
	  The input format (N3, RDF/XML, n-triple) argument, -n, -x and -t
	  respectively, now *only* affect the following argument. In previous
	  versions, the format was 'sticky' in that it persisted until another