@@ -1,6 +1,6 @@
 # (c) Copyright 2005 Hewlett-Packard Development Company, LP
 # All rights reserved.
-# $Id: assembler.n3,v 1.8 2006-10-03 10:27:22 chris-dollin Exp $
+# $Id: assembler.n3,v 1.9 2007-05-09 15:28:08 chris-dollin Exp $
 
 @prefix rdf:        <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
 @prefix rdfs:       <http://www.w3.org/2000/01/rdf-schema#> .
@@ -52,6 +52,7 @@ ja:Object a rdfs:Class
 ja:Model a rdfs:Class
     ; rdfs:subClassOf ja:Object
     ; rdfs:subClassOf ja:Loadable
+	; rdfs:subClassOf ja:ContentItem
     ; rdfs:label "Assembler.Model"
     ; rdfs:comment "the class of Assembler model objects"
     .
